--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -99,3 +99,12 @@
         background-color: rgba(22, 24, 35, 0.06);
     }
 }
+
+.more-btn {
+    font-size: 2rem;
+    margin-left: 24px;
+    padding-left: 4px;
+    padding-right: 20px;
+    padding-bottom: 6px;
+    background-color: transparent;
+}
