--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -10,6 +10,7 @@
     // Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --default-layout-horizontal-spacer: 24px;
 }
 
 * {
@@ -25,7 +26,7 @@ html {
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.6rem;
-    line-height: 1.5rem;
+    line-height: 1.5;
     text-rendering: optimizeSpeed;
     color: var(--text-color);
 }
