--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -14,6 +14,7 @@
 .inner {
     width: var(--default-layout-width, 1150px);
     height: 100%;
+    padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -107,4 +108,5 @@
     padding-right: 20px;
     padding-bottom: 6px;
     background-color: transparent;
+    cursor: pointer;
 }
