--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -101,6 +101,13 @@
     }
 }
 
+// Actions
+.actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .more-btn {
     font-size: 2rem;
     margin-left: 24px;
@@ -108,5 +115,23 @@
     padding-right: 20px;
     padding-bottom: 6px;
     background-color: transparent;
+    cursor: pointer;
+}
+
+.action-btn {
+    color: #161823;
+    background-color: transparent;
+    font-size: 2.2rem;
+    padding: 4px 12px;
+    margin-top: 6px;
+    cursor: pointer;
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 12px;
     cursor: pointer;
 }
