--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -20,86 +20,7 @@
     justify-content: space-between;
 }
 
-.search,
-.search-result {
-    width: 361px;
-    z-index: 99;
-}
-
-.search {
-    position: relative;
-    width: 361px;
-    height: var(--search-height);
-    display: flex;
-    padding-left: 16px;
-    background-color: rgba(22, 24, 35, 0.06);
-    border-radius: var(--search-boder-radius);
-    border: 1.5px solid transparent;
-    overflow: hidden;
-
-    input {
-        height: 100%;
-        color: var(--black);
-        font-size: 1.6rem;
-        background-color: transparent;
-        flex: 1;
-        caret-color: var(--primary);
-
-        &:focus ~ .search {
-            border-color: rgba(22, 24, 35, 0.2);
-        }
-    }
-
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: #4c4e57;
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        top: var(--search-top-space);
-        right: var(--search-button-width);
-        height: calc(var(--search-height) - var(--search-top-space) * 2);
-        width: 1px;
-        background-color: rgba(22, 24, 35, 0.12);
-    }
-
-    &:focus-within {
-        border-color: rgba(22, 24, 35, 0.2);
-    }
-}
-
-.search-title {
-    font-size: 1.4rem;
-    font-weight: 600;
-    padding: 5px 12px;
-    color: rgba(22, 24, 35, 0.5);
-}
-
-.clear,
-.loading {
-    position: absolute;
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-    color: rgba(22, 24, 35, 0.34);
-}
-
-.search-btn {
-    width: var(--search-button-width);
-    height: 100%;
-    color: rgba(22, 24, 35, 0.34);
-    font-size: 1.8rem;
-
-    &:hover {
-        cursor: pointer;
-        background-color: rgba(22, 24, 35, 0.03);
-    }
-
-    &:active {
-        background-color: rgba(22, 24, 35, 0.06);
-    }
-}
+//  Search
 
 // Actions
 .actions {
@@ -119,12 +40,29 @@
 }
 
 .action-btn {
+    position: relative;
+    display: flex;
     color: #161823;
     background-color: transparent;
     font-size: 2.2rem;
     padding: 4px 12px;
     margin-top: 6px;
     cursor: pointer;
+}
+
+.badge {
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--white);
+    font-family: 'ProximaNova', sans-serif;
+    background-color: var(--primary);
 }
 
 .user-avatar {
