--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -20,6 +20,11 @@
     justify-content: space-between;
 }
 
+// Logo
+.logo-link {
+    display: flex;
+}
+
 //  Search
 
 // Actions
@@ -61,7 +66,7 @@
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--white);
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     background-color: var(--primary);
 }
 
