--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -9,6 +9,12 @@
 
 .menu-popper {
     padding-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.menu-body {
+    overflow-y: auto;
 }
 
 // Menu items
@@ -37,6 +43,7 @@
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
 
 .back-icon {
