--- a/src/components/SuggestedAccounts/SuggestedAccounts.module.scss
+++ b/src/components/SuggestedAccounts/SuggestedAccounts.module.scss
@@ -24,6 +24,10 @@
     align-items: center;
     padding: 8px;
     cursor: pointer;
+
+    &:hover {
+        background-color: rgb(22 24 35 / 3%);
+    }
 }
 
 .avatar {
